<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Projekt Zaliczeniowy</string>
    <string name="register_here"><u>Zarejestruj</u></string>
    <string name="login_here"><u>Zaloguj</u></string>
    <string name="login_success">Zalogowano</string>
    <string name="greeting">Cześć</string>
    <string name="order_confirmation">POTWIERDZENIE ZAMÓWIENIA</string>
    <string name="order_mail_part1">Cieszymy się, że zdecydowałeś się zrobić zakupy w naszym sklepie.</string>
    <string name="order_mail_part2">Twoje zamówienie zostanie wysłane w ciągu następnych 24 godzin.</string>
    <string name="order_mail_part3">Dziękujemy za zakupy w naszym sklepie, naprawdę to doceniamy!</string>
    <string name="order_mail_part4">Szczegóły zamówienia:</string>
    <string name="author_text" tools:ignore="Typos">Autor: </string>
    <string name="author_name">Oskar Wiszowaty</string>
    <string name="keyboard">Klawiatura</string>
    <string name="mouse">Mysz</string>
    <string name="monitor">Monitor</string>
    <string name="computer">Komputer</string>
    <string name="price">cena</string>
    <string name="order">Zamówienie</string>
    <string name="order_price">Cena zamówienia</string>
    <string name="menu_order">Zamów</string>
    <string name="menu_log_out">Wyloguj</string>
    <string name="menu_save_login_info">Zapisz dane logowania</string>
    <string name="menu_about_author">O autorze</string>
    <string name="menu_all_orders">Moje zamówienia</string>
    <string name="price_info_no_item"> - </string>
    <string name="order_success">Zamówienie zostało wysłane</string>
    <string name="order_error">Zamówienie nie zostało wysłane</string>
    <string name="info_logged_out">Wylogowano, zamówienia zostały wyczyszczone</string>
    <string name="login_text">Zaloguj</string>
    <string name="author_desc" tools:ignore="Typos">Autor</string>
    <string name="order_button_text">Zamów</string>

    <string-array translatable="false" name="keyboardNames">
        <item>T-WOLF T200</item>
        <item>Corsair Strafe</item>
        <item>Logitech POP</item>
    </string-array>
    <string-array translatable="false" name="keyboardPrices">
        <item>$18.99</item>
        <item>$169.99</item>
        <item>$129.99</item>
    </string-array>
    <string-array translatable="false" name="keyboardDescriptions">
        <item>RGB Podświetlana klawiatura</item>
        <item>Wired keyboard with an USB interface</item>
        <item>Wireless keyboard with an USB interface</item>
    </string-array>
    <string-array translatable="false" name="mouseNames">
        <item>Defender Shepard GM-620L</item>
        <item>Steelseries Prime</item>
        <item>Razer Deathadder</item>
    </string-array>
    <string-array translatable="false" name="mousePrices">
        <item>$9.99</item>
        <item>$59.99</item>
        <item>$39.99</item>
    </string-array>
    <string-array translatable="false" name="mouseDescriptions">
        <item>Myszka przewodowa z sensorem optycznym</item>
        <item>Wireless optic mouse having 5 buttons</item>
        <item>Wired optic mouse having 8 buttons</item>
    </string-array>
    <string-array translatable="false" name="monitorNames">
        <item>Acer NITRO VG270UP</item>
        <item>Gigabyte M27Q</item>
        <item>LG UltraFine</item>
    </string-array>
    <string-array translatable="false" name="monitorPrices">
        <item>$269.99</item>
        <item>$359.99</item>
        <item>$449.99</item>
    </string-array>
    <string-array translatable="false" name="monitorDescriptions">
        <item>IPS WQHD 1ms 144Hz HDR</item>
        <item>27", LED, 2560x1440, IPS, reaction: 1ms</item>
        <item>31.5", LED, 3840x2160, IPS, reaction: 5ms</item>
    </string-array>
    <string-array translatable="false" name="computerNames">
        <item>Dell Alienware</item>
        <item>Predator Orion</item>
        <item>Corsair Vengeance</item>
    </string-array>
    <string-array translatable="false" name="computerPrices">
        <item>$4999.99</item>
        <item>$999.99</item>
        <item>$3299.99</item>
    </string-array>
    <string-array translatable="false" name="computerDescriptions">
        <item>i7–12700KF, RTX 3080Ti, 32GB DDR5 4400MHz, 1TB SSD, 1TB HDD</item>
        <item>i5–12400, GTX 1660, 16GB DDR4 3200MHz, 512GB SSD</item>
        <item>i9–10850K, RTX 3080, 32GB DDR4 3200MHZ, 1TB SSD, 2TB HDD</item>
    </string-array>
</resources>