<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderActivity"
    android:background="@color/backgroundBlack">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:fontFamily="@font/fgofont"
            android:id="@+id/keyboardCheckbox"
            android:text="@string/keyboard"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:saveEnabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner

            android:id="@+id/keyboardSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="false"
            android:layout_below="@id/keyboardCheckbox"
            android:backgroundTint="@color/white"/>

        <CheckBox
            android:fontFamily="@font/fgofont"
            android:id="@+id/mouseCheckbox"
            android:text="@string/mouse"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_below="@id/keyboardSpinner"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/mouseSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/mouseCheckbox"
            android:backgroundTint="@color/white"/>

        <CheckBox
            android:fontFamily="@font/fgofont"
            android:id="@+id/monitorCheckbox"
            android:text="@string/monitor"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_below="@id/mouseSpinner"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/monitorSpinner"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_below="@id/monitorCheckbox"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"/>

        <CheckBox
            android:fontFamily="@font/fgofont"
            android:id="@+id/computerCheckbox"
            android:text="@string/computer"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_below="@id/monitorSpinner"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/computerSpinner"
            android:layout_width="match_parent"
            android:layout_below="@id/computerCheckbox"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"/>

        <TextView
            android:id="@+id/orderPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@string/price_info_no_item"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:layout_below="@id/computerSpinner" />

        <Button
            android:id="@+id/orderButton"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/orderPrice"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/fgofont"
            android:paddingHorizontal="50sp"
            android:paddingVertical="20sp"
            android:text="@string/order_button_text"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </RelativeLayout>

</ScrollView>